# HS-Alexstrasza-Rogue-Cal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: HSSPRCAL.cpp  adapt.cpp  adapt.h  auto.cpp  auto.h  basic.cpp  basic.h  deck.cpp  deck.h  formula.cpp  formula.h  gen.cpp  language.cpp  language.h  offer.cpp  output.cpp  output.h  pre.cpp  solve.cpp  solve.h  solve_refresh.cpp  solve_refresh.h  trans.cpp  trans.h  ui.cpp  ui.h
